add pod age check

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,10 +34,8 @@ required = [
 
 [[constraint]]
   name = "github.com/operator-framework/operator-sdk"
-  # The version rule is used for a specific release and the master branch for in between releases.
   branch = "master"
-  # version = "=v0.0.5"
 
 [[constraint]]
   name = "github.com/jonboulle/clockwork"
-  version = "0.1.0"
+  branch = "master"
